objects/AgileVizArt__Risk__c.object
<CustomObject>
    <description>Log project risks and manage risk portfolio</description>
    <fields>
        <fullName>AgileVizArt__Category__c</fullName>
        <inlineHelpText>Define a category. If you don&apos;t find your values, please contact your administrator</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Resources</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__Description__c</fullName>
        <inlineHelpText>Describe impact and probability of risk. What is the impact on budget, time and quality or scope and how likely is it to happen.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Impact__c</fullName>
        <inlineHelpText>If this risk would occur, how big is the impact on budget, time and quality of the project.</inlineHelpText>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Low</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__Mitigation__c</fullName>
        <inlineHelpText>What are tasks or means to avoid or prevent the risk. We should list tasks which can be taken to prevent beforehand as well as means to deal with if it happens.</inlineHelpText>
        <label>Mitigation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Responsible team member to follow-up mitigation</inlineHelpText>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Probability__c</fullName>
        <inlineHelpText>How likely is this risk to become true or occur. Estimate probability in low, medium, high.</inlineHelpText>
        <label>Probability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Low</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__Project__c</fullName>
        <label>Project</label>
        <referenceTo>AgileVizArt__Project__c</referenceTo>
        <relationshipLabel>Risks</relationshipLabel>
        <relationshipName>Risks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Rating__c</fullName>
        <formula>CASE( AgileVizArt__Impact__c,
&quot;1 - Low&quot;, 1,
&quot;2&quot;, 2,
&quot;3 - Medium&quot;, 3,
&quot;4&quot;, 4,
&quot;5 - High&quot;, 5,
0)

*

CASE(  AgileVizArt__Probability__c ,
&quot;1 - Low&quot;, 1,
&quot;2&quot;, 2,
&quot;3 - Medium&quot;, 3,
&quot;4&quot;, 4,
&quot;5 - High&quot;, 5,
0)

*

CASE(  AgileVizArt__Trend__c ,
&quot;More Critical&quot;, 4,
&quot;Stable&quot;, 2,
&quot;Less Critical&quot;, 1,
2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Status__c</fullName>
        <inlineHelpText>Set status on closed in case risk disappeared or is successfully mitigated</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__Trend_Status__c</fullName>
        <formula>CASE( AgileVizArt__Trend__c,
&quot;More Critical&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000009hEE&quot;, &quot;More Critical&quot;),
&quot;Stable&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000009hES&quot;, &quot;Stable&quot;),
&quot;Less Critical&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015U00000009hEN&quot;, &quot;Less Critical&quot;),
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trend Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Trend__c</fullName>
        <inlineHelpText>How did impact and probability changed since last review. Please revisit regularly in your team meetings.</inlineHelpText>
        <label>Trend</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>More Critical</fullName>
                </value>
                <value>
                    <fullName>Stable</fullName>
                </value>
                <value>
                    <fullName>Less Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Risk</label>
    <nameField>
        <label>Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>